--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -3,9 +3,10 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    width: 100%;
     color: var(--clr-primary);
     gap: 1rem;
+    overflow: hidden;
    
 }
 
@@ -49,8 +50,9 @@
 
 .hero__images{
    position: relative;
-    width: 250px;
+    width: 62%;
     height: 500px;
+    overflow: hidden;
   
 
 }
